--- a/BaiTap/app/src/main/res/layout/activity_main.xml
+++ b/BaiTap/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="548dp">
+        android:layout_height="548dp"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/editText"
@@ -39,8 +40,25 @@
             android:fontFamily="monospace"
             android:hint="What are you looking for?"
             android:inputType="textPersonName"
-            android:paddingStart="12dp"
-            android:textColor="@color/design_default_color_error" />
+            android:paddingStart="12dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/arimo_bold"
+            android:text="Top Discounted Items"
+            android:textColor="@android:color/background_dark"
+            android:textSize="16sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_discount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp" />
+
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -52,13 +70,12 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="277dp"
-            android:layout_marginEnd="18dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/ic_cart_black"
             tools:ignore="VectorDrawableCompat" />
 
@@ -67,7 +84,6 @@
             android:id="@+id/imageView2"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="18dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
