--- a/BaiTap/app/src/main/res/values/preloaded_fonts.xml
+++ b/BaiTap/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,6 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/aref_ruqaa_bold</item>
+        <item>@font/arimo_bold</item>
     </array>
 </resources>
