--- a/BaiTap/app/src/main/res/layout/cart_item.xml
+++ b/BaiTap/app/src/main/res/layout/cart_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="60dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:src="@drawable/discountdress">
+        android:src="@drawable/dress">
     </ImageView>
 
     <LinearLayout
