--- a/BaiTap/app/src/main/res/layout/row_product_seller.xml
+++ b/BaiTap/app/src/main/res/layout/row_product_seller.xml
@@ -26,12 +26,21 @@
             android:layout_centerVertical="true"
             android:orientation="vertical"
             android:layout_toEndOf="@+id/IV_productIcon">
+
+            <TextView
+                android:id="@+id/TV_discountNote"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_textview_product_fill"
+                android:padding="10dp"
+                android:text="10% OFF"
+                android:textColor="@color/colorGreen" />
             <TextView
                 android:id="@+id/TV_productName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
-                android:text="Title"
+                android:text="Name"
                 android:textColor="@color/black"/>
             <LinearLayout
                 android:orientation="horizontal"
@@ -129,6 +138,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
                 <TextView
+                    android:id="@+id/TV_discountPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:text="$150.000"
+                    android:textColor="#808080"/>
+
+                <TextView
+                    android:layout_toEndOf="@+id/TV_discountPrice"
                     android:id="@+id/TV_originalPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
