--- a/BaiTap/app/src/main/res/layout/cart_item.xml
+++ b/BaiTap/app/src/main/res/layout/cart_item.xml
@@ -9,8 +9,7 @@
         android:id="@+id/productImage"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:src="@drawable/discountdress">
+        android:layout_gravity="center">
     </ImageView>
 
     <LinearLayout
@@ -30,10 +29,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Size: "
+                android:layout_gravity="center"/>
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:entries="@array/sizeClothes"
+                android:textAlignment="center"
+                android:layout_gravity="center"/>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
                 android:layout_marginRight="35dp"
                 android:orientation="horizontal">
                 <ImageButton
