--- a/BaiTap/app/src/main/res/layout/cart_item.xml
+++ b/BaiTap/app/src/main/res/layout/cart_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:paddingBottom="5dp"
-    android:layout_height="100dp">
+    android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/productImage"
         android:layout_width="60dp"
@@ -23,77 +23,223 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ProductName"
-            android:layout_marginLeft="25dp"
+            android:textAlignment="center"
             android:textStyle="bold" />
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="55dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Size S: " />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="35dp"
+                        android:orientation="horizontal">
+
+                        <ImageButton
+                            android:id="@+id/minusProductS"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:clickable="true"
+                            android:src="@drawable/ic_minus" />
+
+                        <EditText
+                            android:id="@+id/edt_quantityProductS"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
+                            android:minWidth="25dp"
+                            android:text=""
+                            android:enabled="false"
+                            android:textAlignment="center" />
+
+                        <ImageButton
+                            android:id="@+id/plusProductS"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:clickable="true"
+                            android:src="@drawable/ic_add" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="55dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Size M: " />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="35dp"
+                        android:orientation="horizontal">
+
+                        <ImageButton
+                            android:id="@+id/minusProductM"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:src="@drawable/ic_minus" />
+
+                        <EditText
+                            android:id="@+id/edt_quantityProductM"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
+                            android:minWidth="25dp"
+                            android:enabled="false"
+                            android:text=""
+                            android:textAlignment="center" />
+
+                        <ImageButton
+                            android:id="@+id/plusProductM"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:src="@drawable/ic_add" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="55dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Size L: " />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="35dp"
+                        android:orientation="horizontal">
+
+                        <ImageButton
+                            android:id="@+id/minusProductL"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:src="@drawable/ic_minus" />
+
+                        <EditText
+                            android:id="@+id/edt_quantityProductL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
+                            android:minWidth="25dp"
+                            android:enabled="false"
+                            android:text=""
+                            android:textAlignment="center" />
+
+                        <ImageButton
+                            android:id="@+id/plusProductL"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:src="@drawable/ic_add" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="55dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Size XL: " />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="35dp"
+                        android:orientation="horizontal">
+
+                        <ImageButton
+                            android:id="@+id/minusProductXL"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:src="@drawable/ic_minus" />
+
+                        <EditText
+                            android:id="@+id/edt_quantityProductXL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
+                            android:enabled="false"
+                            android:minWidth="25dp"
+                            android:text=""
+                            android:textAlignment="center" />
+
+                        <ImageButton
+                            android:id="@+id/plusProductXL"
+                            android:layout_width="12dp"
+                            android:layout_height="12dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:src="@drawable/ic_add" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Size: "
-                android:layout_gravity="center"/>
-            <Spinner
-                android:id="@+id/spinner"
+                android:textAllCaps="false"
+                android:text="Price: "
+                android:layout_gravity="center"
+                android:textSize="20dp"/>
+            <TextView
+                android:id="@+id/priceproduct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:entries="@array/sizeClothes"
-                android:textAlignment="center"
-                android:layout_gravity="center"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="35dp"
-                android:orientation="horizontal">
-                <ImageButton
-                    android:id="@+id/minusProduct"
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_minus"
-                    android:background="@null"/>
-
-                <EditText
-                    android:id="@+id/edt_quantityProduct"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:minWidth="25dp"
-                    android:text=""
-                    android:textAlignment="center" />
-
-                <ImageButton
-                    android:id="@+id/plusProduct"
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_gravity="center"
-                    android:background="@null"
-                    android:src="@drawable/ic_add" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_gravity="right">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Total: " />
-                <TextView
-                    android:id="@+id/priceproduct"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="" />
-            </LinearLayout>
+                android:layout_gravity="center"
+                android:text=""
+                android:textSize="20dp"/>
         </LinearLayout>
 
-    </LinearLayout>
 
+    </LinearLayout>
 
 </LinearLayout>
