--- a/BaiTap/app/src/main/res/layout/activity_signup.xml
+++ b/BaiTap/app/src/main/res/layout/activity_signup.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/design_default_color_on_primary"
+    android:background="@drawable/signup_bg"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".SignupActivity">
+    tools:context=".activity.SignupActivity">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,60 +16,55 @@
         android:gravity="center"
         android:text="Please sign up if you don't have account! "
         android:textColor="@color/black"
-        android:textSize="15dp" />
+        android:textSize="20dp" />
 
     <EditText
         android:id="@+id/edittextuser"
-        android:layout_width="382dp"
+        android:layout_width="292dp"
         android:layout_height="46dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/round_border"
         android:drawableLeft="@drawable/ic_people"
-        android:drawablePadding="20dp"
+        android:drawablePadding="10dp"
         android:hint="Username " />
-
 
 
     <EditText
         android:id="@+id/edittextpassword"
-        android:inputType="textPassword"
-        android:layout_width="382dp"
+        android:layout_width="298dp"
         android:layout_height="46dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/round_border"
         android:drawableLeft="@drawable/ic_key"
         android:drawablePadding="10dp"
-        android:hint="Password" />
+        android:hint="Password"
+        android:inputType="textPassword" />
+
     <EditText
         android:id="@+id/edittextname"
-        android:layout_width="382dp"
+        android:layout_width="304dp"
         android:layout_height="46dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/round_border"
         android:drawableLeft="@drawable/ic_people"
         android:drawablePadding="10dp"
         android:hint="Name" />
+
     <EditText
         android:id="@+id/edittextemail"
-        android:layout_width="382dp"
+        android:layout_width="305dp"
         android:layout_height="46dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/round_border"
         android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="20dp"
         android:hint="Email " />
 
 
-
     <Button
         android:id="@+id/butndangki"
-        android:layout_width="373dp"
+        android:layout_width="162dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/round_border"
-        android:text="SIGN UP" />
-
-
+        android:text="SIGN UP"
+        app:backgroundTint="@android:color/holo_blue_dark" />
 
 
 </LinearLayout>
